Revert "opitmize for shardSizes copying"
This reverts commit 0b6cde1e9fb9ed4e880a9c2485ed78396dae9166.